-Optimized return/break singals -Call cache